# chatbot-latex

./: CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: 01_basic_usage.ipynb  02_advanced_usage.ipynb
nbk/: pinecone.ipynb  thesis_from_latex.ipynb
tests/: __init__.py  test_config.py  test_latex_processor.py  test_text_utils.py
thesis_chat/: __init__.py
thesis_chat/core/: __init__.py  latex_processor.py  query_engine.py  thesis_chat.py  vector_store.py
thesis_chat/utils/: __init__.py  config.py  exceptions.py  text_utils.py
